--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  background: #a2b4c4;
+  background: red;
   color: #111;
   transition: all 0.3s ease;
 }
@@ -255,3 +255,4 @@ body.dark .social-icons a:hover {
   filter: none;
   transform: scale(1.1);
 }
+
